# dusklight

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  files.cmake
.claude/: CLAUDE.md
.claude/plans/: rewrite-osmessagequeue.md
.claude/skills/jetbrains-debugger/: SKILL.md
cmake/: AndroidExports.cmake  AppleExports.cmake  GameABIConfig.cmake  ModSDK.cmake  SymbolManifest.cmake  ThreadSanitizer.cmake  WindowsExports.cmake  tsan-ignore.txt
docs/: modding.md
include/d/actor/: d_a_movie_player.h
include/dusk/: logging.h  main.h  settings.h
include/dusk/audio/: DuskAudioSystem.h
libs/audio_sys/: CMakeLists.txt  Cargo.toml  build.rs  cbindgen.toml
libs/audio_sys/.cargo/: config.toml
libs/audio_sys/include/: audio_sys.h
libs/audio_sys/src/: audio_system.rs  lib.rs  sdl_audio.rs
mods/shadow_mod/src/: mod.cpp
notes/: audio-contention.md  osside-table-alignment-fix.md
orig/: .gitkeep
sdk/: CMakeLists.txt
sdk/include/mods/: hook.hpp  meta.hpp  service.hpp
src/d/: d_bright_check.cpp  d_map_path.cpp  d_menu_dmap.cpp  d_menu_fmap.cpp  d_name.cpp  d_save.cpp
src/d/actor/: d_a_alink_demo.inc  d_a_movie_player.cpp  d_flower.inc  d_grass.inc
src/dusk/: OSSideTable.hpp  globals.cpp  main.h  mod_loader.hpp  settings.cpp  stubs.cpp
src/dusk/audio/: DuskAudioSystem.cpp  DuskDsp.cpp
src/dusk/os/: OSContext.cpp  OSMutex.cpp  OSSideTable.hpp  OSThread.cpp  PCMessageQueue.cpp  PCMessageQueue.hpp  reflection.cpp  reflection.h
src/dusk/pc/: PCDataRegistry.hpp  PCHeap.hpp  (+2 more)
src/m_Do/: m_Do_MemCard.cpp  m_Do_ext.cpp  m_Do_main.cpp
tools/: launch_debug.py
(+15 files in other folders)
